--- a/gxcms1.2/views/admin/login.html
+++ b/gxcms1.2/views/admin/login.html
@@ -54,9 +54,10 @@ if(self!=top){
   </div>
 </div>
 <div class="copyright"> 
-	Powered by <a href="{&cms_url}" target="_blank">光线CMS {&cms_var}</a> Copyright &copy;2010-2011 
+	Powered by <a href="{&cms_url}" target="_blank">15看电影（要我看电影） {&cms_var}</a> Copyright &copy;2010-2011
 </div>
-<!--请勿删除以下代码 -->
+<!--请勿删除以下代码 
 <div style="display:none"><script language="javascript" type="text/javascript" src="http://js.users.51.la/4469144.js"></script></div>
+-->
 </body>
 </html>
