--- a/gxcms1.2/template/default/Home/video_play.html
+++ b/gxcms1.2/template/default/Home/video_play.html
@@ -19,7 +19,8 @@ $(document).ready(function(){
 </head>
 <body>
 <div class="mov_play_box">
-  <div id="play_header">
+    <include file="header" />
+<!--  <div id="play_header">
     <div title="{$webname}" class="play_logo"></div>
     <div class="play_nav">
       <a href="{$webpath}">首页</a>
@@ -34,7 +35,7 @@ $(document).ready(function(){
       </form>
     </div>
     <if condition="C('user_register') eq 1"><div id="Login" class="play_login"></div></if>
-  </div>
+  </div>-->
 </div>
 <!--电影播放区域开始-->
 <div class="mplay-bg">
