--- a/gxcms1.2/template/default/Home/header.html
+++ b/gxcms1.2/template/default/Home/header.html
@@ -1,9 +1,14 @@
 <script language="JavaScript" type="text/javascript" src="{$tplpath}template.js"></script>
 <div class="header">
   <div class="top">
-    <div title="{$webname}" class="logo"></div>
+    <div title="{$webname}" class="logo"><a href="http://www.15kdy.com"></a></div>
     <if condition="C('user_register') eq 1"><div id="Login" class="login"></div></if>
-    <div class="control"><a href="{$rssurl}">RSS订阅</a>&nbsp;|&nbsp;<a href="javascript:void(0)" id="fav">收藏本站</a>&nbsp;|&nbsp;<a href="{$guestbookurl}">留言反馈</a>&nbsp;|&nbsp;<span class="his"  id="ggg" onmouseover="fnDisplayMenu(this,'mnuArtStyles');" onmouseout="fnHideMenu('mnuArtStyles'); fnRemoveHighlight('mnuArtStyles');" ><a class="headerMnuLink" id="mnuArtStylesLink" href="javascript:void(0);">播放记录</a></span></div>
+    <div class="control">
+        <!--<a href="#">把本站放到桌面</a>&nbsp;|&nbsp;-->
+<a href="http://www.15kdy.com" onClick="this.style.behavior='url(#default#homepage)';this.setHomePage(this.href);return(false);" >设为主页</a>&nbsp;|&nbsp;
+
+
+        <a href="javascript:void(0)" id="fav">收藏本站</a>&nbsp;|&nbsp;<a href="{$rssurl}">RSS订阅</a>&nbsp;|&nbsp;<a href="{$guestbookurl}">留言反馈</a>&nbsp;|&nbsp;<span class="his"  id="ggg" onmouseover="fnDisplayMenu(this,'mnuArtStyles');" onmouseout="fnHideMenu('mnuArtStyles'); fnRemoveHighlight('mnuArtStyles');" ><a class="headerMnuLink" id="mnuArtStylesLink" href="javascript:void(0);">播放记录</a></span></div>
 
     <div class="popup1" id="mnuArtStyles"  style="display:none" onmouseover="fnDisplayMenu2($('#mnuArtStylesLink'),'mnuArtStyles');" onmouseout="fnHideMenu('mnuArtStyles'); fnRemoveHighlight('mnuArtStyles');" >
       <div id="history">
@@ -11,7 +16,7 @@
    </div>
 
   </div>
-  <div class="nav"><a href="{$webpath}" <if condition="$model eq 'index'">class="cur"</if>>首页</a>
+  <div class="nav"><a href="http://www.15kdy.com" <if condition="$model eq 'index'">class="cur"</if>>首页</a>
     <gxcms name="menu">
     <a onfocus="this.blur();" href="{$menu.showurl}" <if condition="($menu['id'] eq $cid) or ($menu['id'] eq $pid)">class="cur"</if>>{$menu.cname}</a> </gxcms><span>|</span>
     <a href="{$topurl}" <if condition="check_model('top10') eq 1">class="cur"</if>>排行</a>
